Changes
=======

2.7beta2 (unreleased)
---------------------

- Nothing changed yet.


2.7beta1 (2019-11-06)
---------------------

This release moves Hovercraft! over to impress.js 1.0.0. This version of
impress.js has many new features and a new plugin system, which has plenty of
benefits, especially since some features of Hovercraft!, primarily
impressConsole.js, now are plugins to impress.js, so that's less
maintenance burden on me.

The most obvious changes from the previous version of Hovercraft! are:

 - The ``--skip-help`` argument, and ``:skip-help:`` control now disables
   the help popup altogether. This is because impress.js currently has no
   way to stop the help from displaying on load except disabling the help
   completely. This may change in the future.

- Also switched the default MathJax to 2.7.5, a minor update.
  impress.js MathJax extension is simply just Mathjax, there is no additional
  integration, so Hovercraft! doesn't change how Mathjax is integrated.

- Hovecraft! now supports the new impress.js "substep" plugin, so that
  you can show paragraphs lists item by item (see documentation).

Other changes are:

- You can now include audio and video by including the HTML5 <video> and
  <audio> tags in ..raw: html sections.

- Dropped support for Python 3.5, added support for 3.8.

- Many, many documentation fixes and improvements.


2.6 (2018-10-04)
----------------

- The ReStructuredText directive "figure" now is translated into the HTML5
  tag "figure", with the caption becoming a figcaption tag.

- Restored the warning that you need Python 3.5 or higher when trying to
  install with Python 2.

- Simplify in-process execution of Hovercraft! [tonysyu]

- Document how to make custom directorves. [tonysyu]


2.5 (2017-12-10)
----------------

- Hovercraft! now displays the version number when called with -v or --version.

- New version of impressConsole that includes styling of the previews and
  a goto command <G>.
